; ModuleID = '/home/carl/AnghaBench/jq/src/extr_builtin.c_gen_builtin_list.c'
source_filename = "/home/carl/AnghaBench/jq/src/extr_builtin.c_gen_builtin_list.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [11 x i8] c"builtins/0\00", align 1
@.str.1 = private unnamed_addr constant [9 x i8] c"builtins\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32)* @gen_builtin_list to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @gen_builtin_list(i32 %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca i32, align 4
  store i32 %0, i32* %2, align 4
  %4 = load i32, i32* %2, align 4
  %5 = call i32 @block_list_funcs(i32 %4, i32 1)
  %6 = call i32 @jv_string(i8* getelementptr inbounds ([11 x i8], [11 x i8]* @.str, i64 0, i64 0))
  %7 = call i32 @jv_array_append(i32 %5, i32 %6)
  store i32 %7, i32* %3, align 4
  %8 = load i32, i32* %2, align 4
  %9 = call i32 (...) @gen_noop()
  %10 = load i32, i32* %3, align 4
  %11 = call i32 @gen_const(i32 %10)
  %12 = call i32 @gen_function(i8* getelementptr inbounds ([9 x i8], [9 x i8]* @.str.1, i64 0, i64 0), i32 %9, i32 %11)
  %13 = call i32 @BLOCK(i32 %8, i32 %12)
  ret i32 %13
}

declare dso_local i32 @jv_array_append(i32, i32) #1

declare dso_local i32 @block_list_funcs(i32, i32) #1

declare dso_local i32 @jv_string(i8*) #1

declare dso_local i32 @BLOCK(i32, i32) #1

declare dso_local i32 @gen_function(i8*, i32, i32) #1

declare dso_local i32 @gen_noop(...) #1

declare dso_local i32 @gen_const(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
